--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,5 +18,6 @@
     <color name="grey">#999999</color>
     <color name="lightGrey">#F7F7F7</color>
     <color name="middleGrey">#DBDBDB</color>
+    <color name="errorRed">#FF0000</color>
 
 </resources>
