--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,16 +1,47 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. ActionBar, MaterialComponents 임의로 제거.-->
-    <style name="Theme.MySprout" parent="Theme.AppCompat.DayNight.NoActionBar">
+    <style name="Theme.MySprout" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimary">@color/mainGreen</item>
+        <item name="colorPrimaryVariant">@color/mintGreen</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorSecondary">@color/mintGreen</item>
+        <item name="colorSecondaryVariant">@color/mintGreen</item>
+        <item name="colorOnSecondary">@color/almostBlack</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="EditTextMainGreenStyle" parent="Widget.Design.TextInputLayout"> <!--별명, 새싹 이름 입력 부분-->
+        <item name="colorControlNormal">@color/grey</item>  <!--unFocus 상태일때 밑줄 색-->
+        <item name="boxStrokeColor">@color/mainGreen</item> <!--Focus 상태일때 밑줄 색-->
+        <item name="colorControlActivated">@color/mainGreen</item>
+        <item name="android:textCursorDrawable">@color/mainGreen</item>
+
+        <item name="android:textColorHint">@color/grey</item>  <!--hint 색-->
+        <item name="hintTextColor">@color/mainGreen</item>   <!--floating hint 색-->
+
+        <!-- <item name="helperText"></item> xml 에서 한 속성을 여기서도 할 수 있습니다.-->
+        <item name="helperTextTextColor">@color/grey</item>
+
+        <item name="errorTextColor">@color/errorRed</item>
+    </style>
+
+    <style name="EditTextSubGreenStyle" parent="Widget.Design.TextInputLayout"> <!--이메일, 비번 입력 부분-->
+        <item name="colorControlNormal">@color/grey</item>  <!--unFocus 상태일때 밑줄 색-->
+        <item name="boxStrokeColor">@color/subGreen</item> <!--Focus 상태일때 밑줄 색-->
+        <item name="colorControlActivated">@color/subGreen</item>
+        <item name="android:textCursorDrawable">@color/subGreen</item>
+
+        <item name="android:textColorHint">@color/grey</item>  <!--hint 색-->
+        <item name="hintTextColor">@color/subGreen</item>   <!--floating hint 색-->
+
+        <!-- <item name="helperText"></item> xml 에서 한 속성을 여기서도 할 수 있습니다.-->
+        <item name="helperTextTextColor">@color/grey</item>
+
+        <item name="errorTextColor">@color/errorRed</item>
+    </style>
+
 </resources>
