--- a/app/src/main/res/layout/sprout.xml
+++ b/app/src/main/res/layout/sprout.xml
@@ -16,11 +16,11 @@
         android:contentDescription="나중에 새싹 이미지 들어감"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout_sprout1"
         tools:srcCompat="@drawable/tempimage" />
 
     <LinearLayout
-        android:id="@+id/linearLayout4"
+        android:id="@+id/linearLayout_sprout1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -59,25 +59,27 @@
 
             <TextView
                 android:id="@+id/estimateText"
-                android:layout_width="200dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/nbold"
                 android:gravity="end"
                 android:includeFontPadding="false"
                 android:text="@string/savings"
                 android:textColor="@color/mainGreen"
-                android:textSize="60sp" />
+                android:textSize="60sp"
+                android:layout_weight="3"/>
 
             <TextView
                 android:id="@+id/constText_gram"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/nbold"
                 android:gravity="start"
                 android:includeFontPadding="false"
                 android:text="@string/const_unit"
                 android:textColor="@color/mainGreen"
-                android:textSize="24sp" />
+                android:textSize="24sp"
+                android:layout_weight="2"/>
         </LinearLayout>
     </LinearLayout>
 
@@ -121,6 +123,7 @@
         app:layout_constraintVertical_bias="0.023" />
 
     <LinearLayout
+        android:id="@+id/linearLayout_sprout2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="48dp"
